# bucketstore

./: .gitignore  .prospector.yaml  .travis.yml  HISTORY.txt  LICENSE  Pipfile  README.md  README.rst  bucketstore.py  default.nix  pyproject.toml  requirements.dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  test.yml
tests/: __init__.py  conftest.py  test_bucketstore.py
